Fix minor alignment issue with page-nav li.active border-bottom

--- a/municipal_finance/static/stylesheets/scorecard.scss
+++ b/municipal_finance/static/stylesheets/scorecard.scss
@@ -370,8 +370,12 @@ a {
   #page-nav a:hover {
     color: $white;
   }
+  #page-nav li {
+    margin-bottom: 3px;
+  }
   #page-nav li.active {
     border-bottom: solid 3px $brand-primary;
+    margin-bottom: 0;
   }
   #page-nav li.active a {
     background: transparent;
